# gem_final_project

gem_ws/: .gitignore  README.md  commands.txt  frames_2026-05-07_10.21.02.gv
gem_ws/src/basic_launch/: package.xml  setup.cfg  setup.py
gem_ws/src/basic_launch/config/e2/lucid/: lucid_cameras.yaml
gem_ws/src/basic_launch/config/e2/ouster/: driver_params.yaml
gem_ws/src/basic_launch/config/e2/pacmod/: pacmod.yaml
gem_ws/src/basic_launch/config/e2/septentrio_gnss/: ins.yaml
gem_ws/src/basic_launch/config/e2/zed2/: common_stereo.yaml
gem_ws/src/basic_launch/config/e4/livox/: display_point_cloud_ROS2.rviz
gem_ws/src/basic_launch/config/e4/lucid/: lucid_cameras.yaml
gem_ws/src/basic_launch/config/e4/ouster/: driver_params.yaml
gem_ws/src/basic_launch/config/e4/septentrio_gnss/: ins.yaml
gem_ws/src/basic_launch/config/e4/smartmicro_radar/: radar.adapter.yaml  radar.sensor.yaml
gem_ws/src/basic_launch/config/e4/zed2/: zed2.yaml
gem_ws/src/basic_launch/launch/: dbw_joystick.launch.py  gnss.launch.py  rviz_display.launch.py  sensor_init.launch copy.py  sensor_init.launch.py  tf2.launch.py  visualization.launch.py
gem_ws/src/basic_launch/launch/perception/: HAP_launch.py  corner_cameras.launch.py  ouster_driver.launch.py  smartmicro_radar.launch.py  zed_camera.launch.py
gem_ws/src/basic_launch/rviz/: gem_e2.rviz  gem_e4.rviz
gem_ws/src/utilities/: can_stop.sh  highbay_autoware.sh
src/mp1/resources/: HighBay_centerline.csv
src/mp1/scripts/: drive.py  generate_bev_config.py  lane_detect.py  model_utils.py  simple_enet.py  train.py  worldgt.py
(+54 files in other folders)
