<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_launch</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hangcui1201@gmail.com">Hang Cui</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_msgs</depend>

  <exec_depend>automotive_autonomy_msgs</exec_depend>
  <exec_depend>ros2_socketcan</exec_depend>
  <exec_depend>rviz_2d_overlay_plugins</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
